--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WineMBTI</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
-<body class = "container">
-  <article class="start">
-    <h1>나랑 꼭 닮은 와인 품종은?</h1>
-    <button type="button" class="btn btn-outline-primary mt-5" onclick='start();'>테스트 시작!</button>
-  </article>
-  <article class="question">
-    <div class="progress mt-5">
-      <div class="progress-bar bg-success" role="progressbar" style="width: calc(100/12*3%)"></div>
-    </div>
-    <h2 id="title" class="text-center mt-5">문제</h2>
-    <input id="type"type="hidden" value="EI" />
-    <button id="A" type="button" class="btn btn-danger mt-5">버튼A</button>
-    <button id="B" type="button" class="btn btn-danger mt-5">버튼B</button>
-  </article>
-  <input type="hidden" id="EI" value="0"></input>
-  <input type="hidden" id="SN" value="0"></input>
-  <input type="hidden" id="TF" value="0"></input>
-  <input type="hidden" id="JP" value="0"></input>
-  
-  
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-<script src="./javascript/src.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WineMBTI</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class = "container">
+    <article class="start">
+      <h1>나랑 꼭 닮은 와인 품종은?</h1>
+      <button type="button" class="btn btn-outline-primary mt-5" onclick="start();">테스트 시작!</button>
+    </article>
+    <article class="question">
+      <div class="progress mt-5">
+        <div class="progress-bar bg-success" role="progressbar" style="width: calc(100/12*3%)"></div>
+      </div>
+      <h2 id="title" class="text-center mt-5">문제</h2>
+      <input id="type"type="hidden" value="EI" />
+      <button id="A" type="button" class="btn btn-danger mt-5">버튼A</button>
+      <button id="B" type="button" class="btn btn-danger mt-5">버튼B</button>
+    </article>
+    <article class="result">
+      <img id="img" src="./images/champagne.jpg" alt="champagne" class="rounded-circle mt-5" />
+      <h2 id="wine" class="text-center mt-5">와인 품종</h2>
+      <h3 id="explain" class="text-center mt-5">설명</h3>
+    </article>
+    
+    <input type="hidden" id="EI" value="0"></input>
+    <input type="hidden" id="SN" value="0"></input>
+    <input type="hidden" id="TF" value="0"></input>
+    <input type="hidden" id="JP" value="0"></input>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+  <script src="./javascript/src.js"></script>
 </body>
-</html>
+  </html>
