--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class = "container">
     <article class="start">
       <h1>나랑 꼭 닮은 와인 품종은?</h1>
-      <button type="button" class="btn btn-outline-primary mt-5" onclick="start();">테스트 시작!</button>
+      <button type="button" class="badge badge-info mt-5" onclick="start();">Start!</button>
     </article>
     <article class="question">
       <div class="progress mt-5">
