--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <img id="img" src="./images/champagne.jpg" alt="champagne" class="rounded-circle mt-5" />
       <h2 id="wine" class="text-center mt-5">와인 품종</h2>
       <h3 id="explain" class="text-center mt-5">설명</h3>
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+      <div class="share addthis_inline_share_toolbox_ubpy"></div>  
     </article>
     
     <input type="hidden" id="EI" value="0"></input>
@@ -35,5 +37,8 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <script src="./javascript/src.js"></script>
+  //AddThis
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63b2766213c37166"></script>
+
 </body>
   </html>
