--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <h1>나랑 꼭 닮은 와인 품종은?</h1>
       <button type="button" class="badge badge-info mt-5" onclick="start();">Start!</button>
     </article>
+    <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-eFnFxayrXc2A4ggk"
+data-ad-width = "320"
+data-ad-height = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <article class="question">
       <div class="progress mt-5">
         <div class="progress-bar bg-success" role="progressbar" style="width: calc(100/12*3%)"></div>
@@ -29,7 +34,11 @@
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
       <div class="share addthis_inline_share_toolbox_ubpy"></div>  
     </article>
-    
+    <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-eFnFxayrXc2A4ggk"
+data-ad-width = "320"
+data-ad-height = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <input type="hidden" id="EI" value="0"></input>
     <input type="hidden" id="SN" value="0"></input>
     <input type="hidden" id="TF" value="0"></input>
