--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
       <h1>나랑 꼭 닮은 와인 품종은?</h1>
       <button type="button" class="badge badge-info mt-5" onclick="start();">Start!</button>
     </article>
-    <ins class="kakao_ad_area" style="display:none;"
-data-ad-unit = "DAN-eFnFxayrXc2A4ggk"
-data-ad-width = "320"
-data-ad-height = "100"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <article class="question">
       <div class="progress mt-5">
         <div class="progress-bar bg-success" role="progressbar" style="width: calc(100/12*3%)"></div>
@@ -34,11 +29,17 @@ data-ad-height = "100"></ins>
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
       <div class="share addthis_inline_share_toolbox_ubpy"></div>  
     </article>
-    <ins class="kakao_ad_area" style="display:none;"
-data-ad-unit = "DAN-eFnFxayrXc2A4ggk"
-data-ad-width = "320"
-data-ad-height = "100"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+  
+    <article class="kakao_ad mt-5">
+      <ins class="kakao_ad_area" style="display:none;"
+      data-ad-unit = "DAN-eFnFxayrXc2A4ggk"
+      data-ad-width = "320"
+      data-ad-height = "100"></ins>
+    </article>
+    <a class="mt-5 banner" href="https://www.codelion.net/catalog/Q291cnNlTm9kZTpqbW9r?utm_source=animal_test&utm_medium=web_lecture&utm_campaign=cloud9316">
+      <img class="banner-img" src="./images/banner.png" alt="실검에 오르는 MBTI 테스트 광고 베너" />
+    </a>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <input type="hidden" id="EI" value="0"></input>
     <input type="hidden" id="SN" value="0"></input>
     <input type="hidden" id="TF" value="0"></input>
@@ -46,7 +47,7 @@ data-ad-height = "100"></ins>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <script src="./javascript/src.js"></script>
-  //AddThis
+  <!-- AddThis -->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63b2766213c37166"></script>
 
 </body>
